Refine proposal layout and invoice rendering